package sokoban.model;

public class Box {

    public Box() {
    }
}
