package sokoban.model;

public class Ground {

    public Ground() {
    }
}
