package sokoban.model;

public class Player {

    public Player() {
    }
}
