package sokoban.model;

public class Wall {

    public Wall() {
    }
}
